created respnsive catalog page without header and footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,9 +17,9 @@ footer .logo{
 }
 
 .info{
-    display: flex;
+    /* display: flex; */
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .info__cell{
