--- a/css/grid.css
+++ b/css/grid.css
@@ -1,1 +1,31 @@
-/*# sourceMappingURL=grid.css.map */
+.usefulContainer {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .usefulContainer {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .usefulContainer {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .usefulContainer {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .usefulContainer {
+    max-width: 1140px;
+  }
+}
