--- a/css/buttons.css
+++ b/css/buttons.css
@@ -4,11 +4,20 @@
   text-transform: uppercase;
   padding: 16px 64px;
   background-color: var(--purple-clr);
+  width: min(24em, 100%);
+  height: min(4em, 14vw);
   outline: none;
   border: 0;
   border-radius: 10px;
+  padding: 0;
 }
-
+.accent-btn a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .info-btn {
   font-size: medium;
