--- a/css/landing.css
+++ b/css/landing.css
@@ -32,6 +32,7 @@ body {
   background-color: rgba(255, 255, 255, 0.4);
   padding: 32px;
   width: min(100%, 525px);
+  margin-top: 64px;
 }
 
 .landing__content {
@@ -43,7 +44,7 @@ body {
 .landing__content * {
   display: block;
   min-width: 100%;
-  color: white;
+  color: black;
 }
 
 .landing__content input {
@@ -71,4 +72,8 @@ body {
   color: white;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.accent-btn {
+  height: 48px;
 }
